<resources>
    <string name="app_name">学会助手</string>
    <string name="title_dashboard">串口</string>
    <string name="title_home">主页</string>
    <string name="title_notifications">工具</string>

    <string name="Hex_Char">0123456789 AaBbCcDdEeFf</string>
    <string name="Num_Char">0123456789</string>

    <string name="about_version1_4_1">
        <b>版本 1.4.1</b>\n
        【更新】\n
        -遥控器修复按键与开关切换漏洞,显示乱码\n
        -秒表指令修改\n
        @2024.5.16\n
    </string>

    <string name="about_version1_4_0">
        <b>版本 1.4.0</b>\n
        【更新】\n
        -虚拟示波器新增字符串数据类型，定时发送功能\n
        -UI下位机程序更新，新增折线图、摇杆控件\n
        -UI新增切换屏幕方向、更换壁纸功能\n
        -遥控器新增开关,按键开关互相切换等功能\n
        -画板操作略作修改\n
        -其他\n
        @2024.3.15\n
    </string>

    <string name="about_version1_3_0">
        <b>版本 1.3.0</b>\n
        【更新】\n
        -虚拟示波器新增参数调试功能\n
        -遥控器新增摇杆、方向按键\n
        -UI下位机程序优化\n
        -wifi自动连接\n
        -字符编码格式设置\n
        -其他\n
        @2023.4.14\n
    </string>

    <string name="about_version1_2_1">
        <b>版本 1.2.1</b>\n
        【更新】\n
        -虚拟示波器修改波形名称\n
        -UI下位机程序\n
        -遥控器修改按钮名称、定时发送时间间隔\n
        -画板修改透明度\n
        -其他\n
        @2022.9.1\n
    </string>

    <string name="about_version1_1_1">
        <b>版本 1.1.1</b>\n
        【更新】\n
        -帮助\n
        -其他\n
        @2021.6.25\n
    </string>

    <string name="about_version1_1_0">
        <b>版本 1.1.0</b>\n
        【更新】\n
        -蓝牙自动连接\n
        -串口中文接发\n
        -GPS自定义我的位置\n
        -蓝牙4.0发送20以上字符\n
        -修复wifi不能发送问题\n
        -其他\n
        @2021.5.21\n
    </string>

    <string name="about_version1_0_0">
        <b>版本 1.0.0</b>\n
        【更新功能】\n
        -串口\n
        -摄像头\n
        -虚拟示波器\n
        -UI\n
        -遥控器\n
        -秒表\n
        -时钟\n
        -语音播报\n
        -GPS\n
        -画板\n
        -蓝牙2.0、蓝牙4.0、wifi\n
        @2020.7.6\n
    </string>

    <string name="data1">
       链接：https://pan.baidu.com/s/1sPD45Qm112bGMoHR3z-35A?pwd=loem
        提取码：loem
    </string>
    <string name="data2">
        链接：https://pan.baidu.com/s/1j8vMuOdW9zZzQMfAoboGUg?pwd=nwhu
        提取码：nwhu
    </string>
    <string name="data3">
        QQ交流群：593950753
    </string>
</resources>