<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AboutActivity"
    android:orientation="vertical"
    android:background="@color/app_background">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_tb"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:navigationIcon="@drawable/back_image"
        android:background="@color/colorPrimary"
        app:title="关于"
        app:titleTextColor="#FFFFFFFF">
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="81dp"
        android:layout_height="81dp"
        android:layout_marginTop="49dp"
        android:layout_gravity="center"
        android:src="@drawable/about_image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textColor="#000"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Version 1.4.1"
        android:textSize="16dp"
        android:textColor="#000"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_margin="6dp"
        android:gravity="right"
        android:text="历史版本"
        android:textColor="#000"
        android:textSize="16dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#2B000000"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version1_4_1"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version1_4_0"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version1_3_0"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version1_2_1"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version1_1_1"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version1_1_0"
                android:textColor="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_version1_0_0"
                android:textColor="#000"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>