<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DataActivity"
    android:background="@color/app_background"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/data_tb"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        app:navigationIcon="@drawable/back_image"
        android:background="@color/colorPrimary"
        app:title="资料"
        app:titleTextColor="#FFFFFFFF">
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/shape_speech_background">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="129dp"
                    tools:layout_editor_absoluteY="0dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="全部资料：使用手册/下位机例程/安装包"
                        android:textColor="#000"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/data_tv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/data1"
                        android:textColor="#000"
                        android:textIsSelectable="true"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="6dp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/data_bt1"
                    android:layout_width="64dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="5dp"
                    android:text="复制"
                    android:textSize="12dp"
                    android:backgroundTint="#FFEF98"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:onClick="onClick"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/shape_speech_background">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="安装包"
                        android:textColor="#000"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/data_tv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/data2"
                        android:textColor="#000"
                        android:textSize="16dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textIsSelectable="true"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="6dp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/data_bt2"
                    android:layout_width="64dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="5dp"
                    android:text="复制"
                    android:textSize="12dp"
                    android:backgroundTint="#FFEF98"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:onClick="onClick"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="@drawable/shape_speech_background">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="交流群中下载"
                        android:textColor="#000"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/data_tv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:text="@string/data3"
                        android:textColor="#000"
                        android:textSize="16dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textIsSelectable="true"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="6dp"/>
                </LinearLayout>
                <Button
                    android:id="@+id/data_bt3"
                    android:layout_width="64dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="5dp"
                    android:text="复制"
                    android:textSize="12dp"
                    android:backgroundTint="#FFEF98"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:onClick="onClick"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>